[package]
name = "capybara-ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11"
parking_lot = "0.12.1"
bevy = {version = "0.11.3", default-features=false, features=["trace"]}
tokio = {version = "1.33.0", features=["full"]}
bytes = "1.5.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
uuid = "1.4.1"

# Log
log = "0.4.20"

fern = "0.6.2"
humantime = "2.1.0"

capybara-packet = { path = '../capybara-packet'}

serde = {version = "1", features=["derive"]}
toml = "0.8.2"

base64 = "0.21.4"

# Crypto
rsa = "0.9.0"
rand = "0.8.5"
aes = "0.8.3"
cfb8 = "0.8.1"
