[package]
name = "capybara-ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11"
parking_lot = "0.12.1"
bevy_ecs = {version = "0.12", features=["trace", "multi-threaded"]}
bevy_app = "0.12.0"
bevy_tasks = {version = "0.12.0", features=["multi-threaded"]}
bevy_core = "0.12.0"
bevy_hierarchy = "0.12.0"
tokio = {version = "1.33.0", features=["full"]}
bytes = "1.5.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
uuid = "1.5"

# Log
log = "0.4.20"

fern = "0.6.2"
humantime = "2.1.0"

capybara-packet = { path = '../capybara-packet'}

serde = {version = "1", features=["derive"]}
toml = "0.8.6"

base64 = "0.21.5"

# Crypto
rsa = "0.9.3"
rand = "0.8.5"
aes = "0.8.3"
cfb8 = "0.8.1"
