[package]
name = "capybara-nbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = { version = "0.4" }
pprof = { version = "0.3", features = ["flamegraph"] }


[dependencies]
winnow = {version = "0.6.7"}
flate2 = "1.0.30"
serde = "1.0.202"
