[package]
name = "capybara-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capybara-macros= {path = "../capybara-macros"}

bytes = "1.4.0"
thiserror = "1.0.40"
uuid = "1.3.2"
rsa = "0.9.0"
rand = "0.8.5"
log = "0.4.17"