[package]
name = "capybara-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capybara-packet-parser = {path = "../capybara-packetparser"}
capybara-packet-serde = {path = "../capybara-packet-serde"}

serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
bytes = "1.5.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
uuid = "1.5"
rsa = "0.9.3"
rand = "0.8.5"
log = "0.4.17"
