[package]
name = "capybara-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capybara-packet-parser = {path = "../capybara-packetparser"}
capybara-packet-serde = {path = "../capybara-packet-serde"}

serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
bytes = "1.6.0"
anyhow = "1.0.82"
thiserror = "1.0.59"
uuid = "1.8.0"
rsa = "0.9.6"
rand = "0.8.5"
log = "0.4.21"
bevy_ecs = "0.13"
