[package]
name = "capybara"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.23.0", features=["full"]}
bytes = "1.4.0"
anyhow = "1.0.71"
thiserror = "1.0.40"
uuid = "1.3.2"

# Log
log = "0.4.17"
pretty_env_logger = "0.5.0"
chrono = "0.4.24"

# Crypto
rsa = "0.9.0"
rand = "0.8.5"

capybara-macros = {path = '../capybara-macros'}
capybara-packet = {path = "../capybara-packet"}
capybara-ecs = {path = "../capybara-ecs"}